Getting bitpieces ready for production

--- a/resources/uncommon.html
+++ b/resources/uncommon.html
@@ -85,7 +85,7 @@ Javascript
 
     ...
 
-standardFormPost('user_withdraw', '#withdrawForm', '#withdrawModal');
+standardFormPost('user_withdraw', '#withdrawForm', '#withdrawModal', true);
 
 Creator pages
 -------------
