--- a/resources/web/FAQ.html
+++ b/resources/web/FAQ.html
@@ -131,7 +131,7 @@
      <hr>
 
      <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="affix" id="sidebar" role="complementary">
           <ul class="nav nav-tabs nav-stacked affix nav-list" id="mynav" data-spy="affix" data-offset-top="280">
             <li><a href="#what_is_bitpieces">What is Bitpieces?<i class="fa fa-chevron-right pull-right"></i></a></li>
@@ -140,8 +140,10 @@
             <li><a href="#what_are_rewards">What are rewards?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#why_are_rewards_mandatory">Why are rewards mandatory?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#how_are_rewards_calculated">How are rewards calculated?  <i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#how_is_worth_calculated">How is worth calculated?  <i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#does_price_affect_rewards">Does price affect rewards?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#how_do_i_know_if_a_creator_is_safe">How do I know if a creator is safe?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#whats_the_difference_between_buying_and_bidding">What's the difference between buying and bidding? <i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#what_are_bids_and_asks">What are bids and asks? <i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#what_are_the_fees">What are the fees for using Bitpieces?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#why_use_bitcoin_instead_of_dollars">Why use Bitcoin instead of dollars?<i class="fa fa-chevron-right pull-right"></i></a></li>
@@ -154,7 +156,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-9" id="mycontent">
+      <div class="col-md-8" id="mycontent">
         <div id="what_is_bitpieces">
           <h2 class="">What is Bitpieces?</h2>
           Bitpieces is a crowd-funding platform to get creative projects off the ground. Instead of promising
@@ -170,19 +172,22 @@
           <h2>What are pieces?</h2>
           Pieces are little entities guaranteeing you rewards from a creator. In a sense,
           they represent your contribution to a creator's brand. When you buy pieces from a 
-          <a href="#what_is_a_creator"> creator</a>, you are helping them fund their work.
+          <a href="#what_is_a_creator"> creator</a>, you are helping them fund their work. Also, when you buy pieces,
+           monetary rewards <b>immediately and automatically</b> start building in your account, which you can withdraw at any time. 
+          <br><br>
           As their brand becomes more(or less)
           valuable, your pieces may rise or fall in value, based on the their brand strength,
           popularity, or supply and demand. However, the <a href="#what_are_rewards">rewards</a>
           you collect are unaffected by changes in the price or value of your pieces. 
           <br><br>Once you own pieces from a creator, you can <a href="#what_are_bids_and_asks">bid,
           and ask</a>, to sell your pieces on an open market.
+
           <hr class="col-md-12">
         </div> 
         <div id="what_is_a_creator">   
           <h2 class="">What is a creator?</h2>
           A creator is the term Bitpieces uses to refer to the content-creators who 
-          are issuing pieces to raise funds.
+          are issuing pieces to raise funds. A creator is not a project; it is a <b>brand</b>, which could potentially run many projects. A creator can refer to a single person, a group of people, or a company trying to raise money.
           <hr class="col-md-12">
         </div>
         <div id="what_are_rewards">
@@ -191,7 +196,8 @@
           miniscule, but as their project generates profits, they can change the reward
           to increase the value of their brand. Bitpieces differs from most systems in 
           that rewards are continuous; from the moment pieces are purchased, they start
-          generating <a href="#how_are_rewards_calculated">rewards</a>. There are no specific dates at which rewards are payed out, 
+          generating <a href="#how_are_rewards_calculated">rewards</a>, in their funders accounts, automatically. 
+          There are no specific dates at which rewards are payed out, 
           they build in your account and can be withdrawn at any time.
           <hr class="col-md-12">
         </div>
@@ -234,6 +240,21 @@
           <hr class="col-md-12">
         </div>
 
+        <div id="how_is_worth_calculated">
+          <h2 class="">How is worth calculated?</h2>
+          After a creator sells all their pieces, funders may want to bid and ask on the pieces that are already
+          in the market. This means that if a piece was initially sold for $1, someone might be willing to buy it later on at 
+          $2. 
+          <br><br> 
+          This means that there are two distinct numbers for a creator's value: <b>Worth</b>, and funds raised. While funds raised is
+          simply the money that the creators made by selling pieces to funders, worth is the total value of all the pieces combined.
+          <br><br>
+          If a creator raised $100, by selling 100 pieces at $1/piece, and the price per piece later on increases to $2, then the 
+          creators worth is now $200, and the funds they raised is still $100.
+
+          <hr class="col-md-12">
+        </div>
+
         <div id="does_price_affect_rewards">
           <h2 class="">Does price affect rewards?</h2>
           No. Since rewards are a rate of reward / <b>piece</b> / year, the price of the piece will not
@@ -264,10 +285,10 @@
             <li>
               <h3> Mandatory rewards</h3>
               One of the oddities of Bitpieces, is in this question: If a creator is trying to raise money, 
-              then why should they be forced to reward their creators right away?
+              then why should they be forced to reward their funders right away?
               <br><br>
               The answer is this: security. Rewards, no matter how miniscule the amount, help to establish 
-              a <a href="why_are_rewards_mandatory">history of trust</a>. When you see that a creator has
+              a <a href="#why_are_rewards_mandatory">history of trust</a>. When you see that a creator has
               consistently paid their funders rewards, and has a history of increasing that amount, no matter
               how tiny it started off, it builds trust.
             </li>
@@ -306,6 +327,14 @@
 
           <hr class="col-md-12">
         </div>
+
+         <div id="whats_the_difference_between_buying_and_bidding">
+          <h2 class="">What's the difference between buying and bidding?</h2>
+            The <b>buy</b> button buys pieces from a creator directly, at a fixed price that they choose. The bid button
+            is an open request to buy pieces from <b>another funder</b>, at whatever price you are willing to pay. See 
+            <a href="#what_are_bids_and_asks">below</a> for more information.
+            <hr class="col-md-12">
+          </div>
 
         <div id="what_are_bids_and_asks">
           <h2 class="">What are bids and asks?</h2>
@@ -391,7 +420,7 @@
             <h2 class="">How safe is Bitpieces?</h2>
             Bitpieces is still considered to be at a beta safety-level, but here are our 
             <a href="#how_do_i_know_if_a_creator_is_safe">5 pillars of security</a>. To test Bitpieces 
-            in a no-money, completely risk-free testing environment, head over to our <a href="#">test site</a>, 
+            in a no-money, completely risk-free testing environment, head over to our <a href="http://test.bitpieces.com">test site</a>, 
             where you can simulate user and creator accounts, with no real money involved.
             <hr class="col-md-12">
           </div>
