--- a/resources/web/about.html
+++ b/resources/web/about.html
@@ -132,24 +132,46 @@
 
      <div class="row">
        <div class="col-md-12">
+         <h2 class="featurette-heading">About </h2>
          Bitpieces was founded in 2014 as a crowd-funding platform for content-creators and small businesses, inspired by other crowd-funding platforms, with the intention of using Bitcoin as the transaction processing network. 
          <br><br>
          It was inspired by seeing the need to subvert the tremendous barriers to entry for startup companies; such as finding angel investors and private capital, doing seed rounds, and the efforts and energy wasted to raise money for great ideas. With the net', finding funding for great projects should be easy and engaging.
          <br><br>
          In addition, smaller content-creators need a way to raise funds, and do so in a way that makes their funders feel safe. While numerous small stock-like exchanges exist, none feel suited for the web, for the type of content people make in today's world, or for low-end content creators who just want to keeping making the things.
          <br><br>
+
          <a class="btn btn-default" href="/FAQ" role="button">Learn more &raquo;</a>
 
 
        </div>
      </div>
+     <hr>
+
+     <div class="row">
+       <div class="col-md-12">
+       <h2 class="featurette-heading">Team </h2>
+         Once this project picks up, I plan to hire a team, but for right now its just me, Tyler Houlihan. 
+         <br><br>
+         About me: I'm a software developer with several years of experience in the financial services industry, and in defense. I'm interested in bitcoin, reddit, reading, and making music (piano, guitar, ableton live). The idea for this project originally came to me out of an intense desire to quit my job and work on my music full-time, so you could say that Bitpieces was designed with musicians in mind. 
+         <br><br>
+         <img class="featurette-image img-responsive" src="img/profile.jpg" alt="Generic placeholder image">
+
+         <a href="https://github.com/tchoulihan/">github</a>
+         <a href="https://www.facebook.com/tyler.houlihan">facebook</a>
+         <a href="https://www.google.com/+TylerHoulihan">google plus</a>
+         <a href="http://hrtc.co">heretic</a> 
+
+       </div>
+     </div>
+
+
 
      <!-- FOOTER -->
      <hr class="featurette-divider">
      <footer>
       <p class="pull-right"><a href="#">Back to top</a></p>
       <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
-      &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
+        &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
       </footer>
       
     </div>
