--- a/resources/web/creator_settings.html
+++ b/resources/web/creator_settings.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
 	<title>Bitpieces</title>
+
+    <!-- favicon -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 	<!-- Bootstrap core CSS -->
 	<link href="darkly.bootstrap.min.css" rel="stylesheet">
@@ -166,7 +168,7 @@
 
 
     <!-- The Page -->
-    <div id="main_col" class="col-md-12 main">
+   <div class="main-col col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2">
 
 
       <div class="row">
@@ -268,11 +270,7 @@
 </form>
 </script>
 </div>
-<div class="row col-md-6">
- <h3> Notifications </h3>
- <hr></hr>
- <!-- end of wrapper -->
-</div>
+
 
 
 </div>
