--- a/resources/web/creator_funds.html
+++ b/resources/web/creator_funds.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
 	<title>Bitpieces</title>
+
+    <!-- favicon -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 	<!-- Bootstrap core CSS -->
 	<link href="darkly.bootstrap.min.css" rel="stylesheet">
@@ -130,19 +132,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </div>
-      <div class="list-group">
-        <li class="list-group-item">
-         <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
-         <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
-       </li>
-       <a class="list-group-item" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
-       <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-dollar"></i> Price</a>
-       <a class="list-group-item" href="/creators/worth" rel="keep-params"><i class="fa fa-building-o"></i> Worth</a>
-       <a class="list-group-item" href="/creators/rewards" rel="keep-params"><i class="fa fa-trophy"></i> Rewards</a>
-       <a class="list-group-item active" href="/creators/funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
-       <a class="list-group-item" href="/creators/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
-       
-     </div>
+        <div class="list-group">
+          <li class="list-group-item">
+           <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
+           <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
+         </li>
+         <a class="list-group-item" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
+         <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-dollar"></i> Price</a>
+         <a class="list-group-item" href="/creators/worth" rel="keep-params"><i class="fa fa-building-o"></i> Worth</a>
+         <a class="list-group-item" href="/creators/rewards" rel="keep-params"><i class="fa fa-trophy"></i> Rewards</a>
+         <a class="list-group-item active" href="/creators/funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
+         <a class="list-group-item" href="/creators/pieces" rel="keep-params"><i class="fa fa-puzzle-piece"></i> Pieces</a>
+         
+       </div>
      </div>        
    </div>
 
@@ -163,7 +165,7 @@
 
 
   <!-- The Page -->
-  <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+   <div class="main-col col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2">
 
 
 
@@ -175,12 +177,13 @@
       </div>
       <div class="col-md-6">
         <div class="col-md-12">
-         <button id="askBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
-         <button id="bidBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
-         <button id="buyBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
-         <button id="issueBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
-         <button id="changeRewardBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
-         <button id="withdrawBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
+           <button id="askBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
+          <button id="bidBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
+          <button id="buyBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
+          <button id="raiseFundsBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#raiseFundsModal">Raise funds</button>
+          <button id="issueBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
+          <button id="changeRewardBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
+          <button id="withdrawBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
 
 
        </div>
@@ -261,11 +264,11 @@
 
 <!-- FOOTER -->
 <hr class="featurette-divider">
-     <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
-      &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
-      </footer>
+<footer>
+  <p class="pull-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="about">About</a> &middot; <a href="contact">Contact</a>
+    &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
+  </footer>
 
   
 </div>
@@ -275,7 +278,7 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-            <div class="modal-header">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Bid</h4>
       </div>
       <div class="modal-body">
@@ -365,7 +368,7 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-            <div class="modal-header">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">buy</h4>
       </div>
       <div class="modal-body">
@@ -438,24 +441,43 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-            <div class="modal-header">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Deposit</h4>
       </div>
       <div id="deposit_div" class="modal-body">
-       <script id="deposit_template" type="x-tmpl-mustache">
-        <iframe src="https://coinbase.com/inline_payments/{{.}}" style="width: 500px; height: 160px; border: none; box-shadow: 0 1px 3px rgba(0,0,0,0.25); overflow: hidden;" scrolling="no" allowtransparency="true" frameborder="0"></iframe>
-      </script>
-    </div>
+        <form id="depositForm" class="form-horizontal" role="form">
+          This is a fake deposit form: type in any amount you like.
+          <div class="form-group form-group-lg">
+            <label class="col-sm-2 control-label" for="formGroupInputLarge">Amount</label>
+            <div class="col-sm-10">
+              <div class="input-group">
+                <div id="depositSymbol" class="input-group-addon">?</div>
 
+                <input name="depositAmount" class="form-control" type="text" id="formGroupInputLarge" placeholder="Current funds"
+                data-bv-greaterthan="true"
+                data-bv-greaterthan-value=".01"
+                data-bv-greaterthan-message="Must be > .01"
+                >
+              </div>
+            </div>
+
+
+          </div>
+
+
+          <button id="placedepositBtn" type="submit" class="btn btn-primary">Deposit</button>
+
+        </form>
+      </div>
+
+    </div>
   </div>
 </div>
-</div>
-
 <div id="askModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
 
     <div class="modal-content">
-            <div class="modal-header">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Ask</h4>
       </div>
       <div class="modal-body">
@@ -547,7 +569,7 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-            <div class="modal-header">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Issue Pieces</h4>
       </div>
       <div class="modal-body">
@@ -626,7 +648,7 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-            <div class="modal-header">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">withdraw</h4>
       </div>
       <div class="modal-body">
@@ -701,7 +723,7 @@
   <div class="modal-dialog">
 
     <div class="modal-content">
-            <div class="modal-header">
+      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Change Reward</h4>
       </div>
       <div class="modal-body">
@@ -762,7 +784,7 @@
       <script src="typeahead.js/typeahead.bundle.js"></script>
       <script src="pickadate/lib/picker.js"></script>
       <script src="pickadate/lib/picker.date.js"></script>
-       <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
+      <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 
       <!-- my scripts -->
       <script src="tools.js"></script>
