--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
 	<title>Bitpieces</title>
+
+    <!-- favicon -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 	<!-- Bootstrap core CSS -->
 	<link href="darkly.bootstrap.min.css" rel="stylesheet">
@@ -160,7 +162,7 @@
 
 
   <!-- The Page -->
-  <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+ <div class="main-col col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2">
 
    <div class="row">
     <div class="col-md-12">
@@ -170,12 +172,13 @@
       </div>
       <div class="col-md-6">
         <div class="col-md-12">
-         <button id="askBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
-         <button id="bidBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
-         <button id="buyBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
-         <button id="issueBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
-         <button id="changeRewardBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
-         <button id="withdrawBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
+          <button id="askBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#askModal">Ask</button>
+          <button id="bidBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#bidModal">Bid</button>
+          <button id="buyBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#buyModal">Buy</button>
+          <button id="raiseFundsBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#raiseFundsModal">Raise funds</button>
+          <button id="issueBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#issueModal">Issue Pieces</button>
+          <button id="changeRewardBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#rewardModal">Change Reward</button>
+          <button id="withdrawBtn" type="button" class="btn btn-default btn-lg hide pull-right" data-toggle="modal" data-target="#withdrawModal">Withdraw</button>
 
 
        </div>
@@ -205,55 +208,9 @@
   </div>
 </div><!-- /.row -->
 
-<div class="row"> 
-  <div class="col-md-6">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Current Bids and Asks</h3>
-      </div>
-      <div id="bids_asks" class="panel-body" style="height: 276px;overflow:auto;">
-        <script id="bids_asks_template" type="x-tmpl-mustache"> 
-          <table id="bids_asks_table" class="table table-hover table-striped tablesorter">
-            <thead> 
-              <tr>
-                <th>Time <i class="fa fa-sort"></i></th>
-                <th>User <i class="fa fa-sort"></th>
-                <th>Type <i class="fa fa-sort"></th>
-                <th>Pieces <i class="fa fa-sort"></th>
-                <th>Price per piece<i class="fa fa-sort"></th>
-              </tr>
-            </thead>
-
-            <tbody>
-
-              {{#.}}
-
-              <tr> 
-                <td>{{time_}}</td>
-                <td><a href="/users/overview/{{users_name}}">{{users_name}}</a></td>
-                <td>{{type}}</td>
-                <td>{{pieces}}</td>
-                <td>{{price_per_piece}}</td>
-              </tr>
-              {{/.}}
-
-            </tbody>
-          </script>
-        </table>
-
-      </div>
-      <div class="panel-footer">
-        <ul class="pager">
-          <li id="bids_asks_pager_prev" class="disabled"><a href="javascript:void(0);">Previous</a></li>
-          <li id="bids_asks_pager_next" ><a href="javascript:void(0);">Next</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
 
 
 
-</div>
 
  <!-- FOOTER -->
  <hr class="featurette-divider">
@@ -449,7 +406,6 @@
   </div>
 </div>
 </div>
-
 <div id="askModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
 
