--- a/resources/web/userdashboard_settings.html
+++ b/resources/web/userdashboard_settings.html
@@ -157,7 +157,7 @@
 
 
   <!-- The Page -->
-  <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
+   <div class="main-col col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2">
 
     <div class="row">
       <div class="col-lg-12">
@@ -262,17 +262,7 @@
 </form>
 </script>
 </div>
-<div class="row col-md-6">
- <h3> Notifications </h3>
 
- <hr></hr>
- <!-- a big ass chart -->
- <div class="row">
-  <div class="col-lg-12">
-
-  </div>
-</div>
-</div>
 
 </div>
 <!-- end of wrapper -->
@@ -296,8 +286,6 @@
       </div>
 
       <div class="modal-body">
-
-        <h3> Register &nbsp;&nbsp;&nbsp; <small><a href="/creators_register">Creator register</a> </small></h3>
 
         <form id="changePasswordForm" class="form-horizontal" role="form"
         data-bv-message="This value is not valid"
