switched to using https

--- a/resources/testweb/userdashboard_funds.html
+++ b/resources/testweb/userdashboard_funds.html
@@ -243,7 +243,7 @@
       <script src="json.date-extensions.js"></script>
       <script src="tablesorter/jquery.tablesorter.js"></script> 
       <script src="typeahead.js/typeahead.bundle.js"></script>
-       <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
+       <script type="text/javascript" src="https://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 
 
       <!-- my scripts -->
