--- a/resources/web/creator_worth.html
+++ b/resources/web/creator_worth.html
@@ -716,7 +716,7 @@
       <script src="typeahead.js/typeahead.bundle.js"></script>
       <script src="pickadate/lib/picker.js"></script>
       <script src="pickadate/lib/picker.date.js"></script>
-       <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
+       <script type="text/javascript" src="https://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 
       <!-- my scripts -->
       <script src="tools.js"></script>
