--- a/resources/testweb/testing_home.html
+++ b/resources/testweb/testing_home.html
@@ -506,7 +506,7 @@
       <script src="pickadate/lib/picker.js"></script>
       <script src="pickadate/lib/picker.date.js"></script>
       <script src="summernote/dist/summernote.min.js"></script>
-      <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
+      <script type="text/javascript" src="https://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 
       <!-- my scripts -->
       <script src="tools.js"></script>
