--- a/resources/web/creator_settings.html
+++ b/resources/web/creator_settings.html
@@ -10,7 +10,7 @@
 	<title>Bitpieces</title>
 
     <!-- favicon -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://bitpieces.com/favicon.ico" type="image/x-icon" />
 
 	<!-- Bootstrap core CSS -->
 	<link href="darkly.bootstrap.min.css" rel="stylesheet">
