--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -124,7 +124,7 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img  src="img/500xaaa4752463128_9a43bfb383_o.jpg" alt="First slide">
+              <img  src="img/market-practices-blurred.jpg" alt="First slide">
             </div>
             <div class="container">
               <div class="carousel-caption">
@@ -137,7 +137,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/500x1065025171_d7ed482beb_o.jpg"alt="Second slide">
+                <img src="img/500xaaa4752463128_9a43bfb383_o.jpg"alt="Second slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -149,7 +149,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/500x9698053846_b71848a973_o.jpg" alt="Third slide">
+                <img src="img/500x1065025171_d7ed482beb_o.jpg" alt="Third slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
@@ -164,6 +164,7 @@
           <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
         </div><!-- /.carousel -->
 
+        <!-- img/500x9698053846_b71848a973_o.jpg -->
 
 
       <!-- Marketing messaging and featurettes
