--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -137,7 +137,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/500xaaa4752463128_9a43bfb383_o.jpg"alt="Second slide">
+                <img class="img-responsive center-block" src="img/500xaaa4752463128_9a43bfb383_o.jpg"alt="Second slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
