--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -124,7 +124,7 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img class="img-responsive center-block" src="img/market-practices-3.jpg" width = "100%" alt="First slide">
+              <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
             </div>
             <div class="container">
               <div class="carousel-caption">
