--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -124,12 +124,12 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img class="img-responsive" src="img/market-practices-3.jpg" alt="First slide">
+              <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
             </div>
             <div class="container">
               <div class="carousel-caption">
                 <h1>The next generation of crowd funding is here</h1>
-                <p></p>
+                <p><br><br></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
                 </div>
@@ -149,7 +149,7 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/500x1065025171_d7ed482beb_o.jpg" alt="Third slide">
+                <img class="img-responsive center-block" src="img/500x1065025171_d7ed482beb_o.jpg" alt="Third slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
