--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -128,7 +128,7 @@
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1 class="lead">The next generation of crowd funding is here</h1>
+                <h1><b>The next generation of crowd funding is here</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
@@ -141,7 +141,7 @@
               </div>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1 class="lead">Helping content creators do what they do best</h1>
+                  <h1>Helping content creators do what they do best</h1>
                   <p></p>
                   <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
                 </div>
@@ -153,7 +153,7 @@
               </div>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1 class="lead">Get creative projects in motion</h1>
+                  <h1>Get creative projects in motion</h1>
                   <p></p>
                   <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
                 </div>
