--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -127,12 +127,14 @@
               <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
             </div>
             <div class="container">
+              <div class="carousel-surround-caption">
               <div class="carousel-caption">
                 <h1><b>The next generation of crowd funding is here</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
                 </div>
+              </div>
               </div>
             </div>
             <div class="item">
