--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -124,17 +124,15 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
+              <img class="img-responsive center-block blur" src="img/market-practices-3.jpg" alt="First slide">
             </div>
             <div class="container">
-              <div class="carousel-surround-caption">
               <div class="carousel-caption">
                 <h1><b>The next generation of crowd funding is here</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
                 </div>
-              </div>
               </div>
             </div>
             <div class="item">
