--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -124,7 +124,7 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img class="img-responsive center-block blur" src="img/market-practices-3.jpg" alt="First slide">
+              <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
             </div>
             <div class="container">
               <div class="carousel-caption">
@@ -141,7 +141,7 @@
               </div>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>Helping content creators do what they do best</h1>
+                  <h1><b>Helping content creators do what they do best</b></h1>
                   <p></p>
                   <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
                 </div>
@@ -153,7 +153,7 @@
               </div>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>Get creative projects in motion</h1>
+                  <h1><b>Get creative projects in motion</b></h1>
                   <p></p>
                   <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
                 </div>
