--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -124,11 +124,11 @@
         <div class="carousel-inner">
           <div class="item active">
             <div class="900-image" align="center">
-              <img  src="img/500xaaa4752463128_9a43bfb383_o.jpg" alt="First slide">
+              <img class="img-responsive center-block" src="img/market-practices-3.jpg" alt="First slide">
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1>The next generation of crowd funding is here</h1>
+                <h1><b>The next generation of crowd funding is here</b></h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
@@ -137,11 +137,11 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/500x1065025171_d7ed482beb_o.jpg"alt="Second slide">
+                <img class="img-responsive center-block" src="img/500xaaa4752463128_9a43bfb383_o.jpg"alt="Second slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>Helping content creators do what they do best</h1>
+                  <h1><b>Helping content creators do what they do best</b></h1>
                   <p></p>
                   <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
                 </div>
@@ -149,11 +149,11 @@
             </div>
             <div class="item">
               <div class="900-image" align="center">
-                <img src="img/500x9698053846_b71848a973_o.jpg" alt="Third slide">
+                <img class="img-responsive center-block" src="img/500x1065025171_d7ed482beb_o.jpg" alt="Third slide">
               </div>
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>Get creative projects in motion</h1>
+                  <h1><b>Get creative projects in motion</b></h1>
                   <p></p>
                   <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
                 </div>
@@ -164,6 +164,7 @@
           <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
         </div><!-- /.carousel -->
 
+        <!-- img/500x9698053846_b71848a973_o.jpg -->
 
 
       <!-- Marketing messaging and featurettes
